--- a/lab-intro_to_ml.ipynb
+++ b/lab-intro_to_ml.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -162,41 +162,164 @@
        "      <td>Willy Santantines</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8688</th>\n",
+       "      <td>9276_01</td>\n",
+       "      <td>Europa</td>\n",
+       "      <td>False</td>\n",
+       "      <td>A/98/P</td>\n",
+       "      <td>55 Cancri e</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6819.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1643.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>Gravior Noxnuther</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8689</th>\n",
+       "      <td>9278_01</td>\n",
+       "      <td>Earth</td>\n",
+       "      <td>True</td>\n",
+       "      <td>G/1499/S</td>\n",
+       "      <td>PSO J318.5-22</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Kurta Mondalley</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8690</th>\n",
+       "      <td>9279_01</td>\n",
+       "      <td>Earth</td>\n",
+       "      <td>False</td>\n",
+       "      <td>G/1500/S</td>\n",
+       "      <td>TRAPPIST-1e</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1872.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Fayey Connon</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8691</th>\n",
+       "      <td>9280_01</td>\n",
+       "      <td>Europa</td>\n",
+       "      <td>False</td>\n",
+       "      <td>E/608/S</td>\n",
+       "      <td>55 Cancri e</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1049.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>353.0</td>\n",
+       "      <td>3235.0</td>\n",
+       "      <td>Celeon Hontichre</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8692</th>\n",
+       "      <td>9280_02</td>\n",
+       "      <td>Europa</td>\n",
+       "      <td>False</td>\n",
+       "      <td>E/608/S</td>\n",
+       "      <td>TRAPPIST-1e</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>4688.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>Propsh Hontichre</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>8693 rows × 14 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  PassengerId HomePlanet CryoSleep  Cabin  Destination   Age    VIP  \\\n",
-       "0     0001_01     Europa     False  B/0/P  TRAPPIST-1e  39.0  False   \n",
-       "1     0002_01      Earth     False  F/0/S  TRAPPIST-1e  24.0  False   \n",
-       "2     0003_01     Europa     False  A/0/S  TRAPPIST-1e  58.0   True   \n",
-       "3     0003_02     Europa     False  A/0/S  TRAPPIST-1e  33.0  False   \n",
-       "4     0004_01      Earth     False  F/1/S  TRAPPIST-1e  16.0  False   \n",
+       "     PassengerId HomePlanet CryoSleep     Cabin    Destination   Age    VIP  \\\n",
+       "0        0001_01     Europa     False     B/0/P    TRAPPIST-1e  39.0  False   \n",
+       "1        0002_01      Earth     False     F/0/S    TRAPPIST-1e  24.0  False   \n",
+       "2        0003_01     Europa     False     A/0/S    TRAPPIST-1e  58.0   True   \n",
+       "3        0003_02     Europa     False     A/0/S    TRAPPIST-1e  33.0  False   \n",
+       "4        0004_01      Earth     False     F/1/S    TRAPPIST-1e  16.0  False   \n",
+       "...          ...        ...       ...       ...            ...   ...    ...   \n",
+       "8688     9276_01     Europa     False    A/98/P    55 Cancri e  41.0   True   \n",
+       "8689     9278_01      Earth      True  G/1499/S  PSO J318.5-22  18.0  False   \n",
+       "8690     9279_01      Earth     False  G/1500/S    TRAPPIST-1e  26.0  False   \n",
+       "8691     9280_01     Europa     False   E/608/S    55 Cancri e  32.0  False   \n",
+       "8692     9280_02     Europa     False   E/608/S    TRAPPIST-1e  44.0  False   \n",
        "\n",
-       "   RoomService  FoodCourt  ShoppingMall     Spa  VRDeck               Name  \\\n",
-       "0          0.0        0.0           0.0     0.0     0.0    Maham Ofracculy   \n",
-       "1        109.0        9.0          25.0   549.0    44.0       Juanna Vines   \n",
-       "2         43.0     3576.0           0.0  6715.0    49.0      Altark Susent   \n",
-       "3          0.0     1283.0         371.0  3329.0   193.0       Solam Susent   \n",
-       "4        303.0       70.0         151.0   565.0     2.0  Willy Santantines   \n",
+       "      RoomService  FoodCourt  ShoppingMall     Spa  VRDeck               Name  \\\n",
+       "0             0.0        0.0           0.0     0.0     0.0    Maham Ofracculy   \n",
+       "1           109.0        9.0          25.0   549.0    44.0       Juanna Vines   \n",
+       "2            43.0     3576.0           0.0  6715.0    49.0      Altark Susent   \n",
+       "3             0.0     1283.0         371.0  3329.0   193.0       Solam Susent   \n",
+       "4           303.0       70.0         151.0   565.0     2.0  Willy Santantines   \n",
+       "...           ...        ...           ...     ...     ...                ...   \n",
+       "8688          0.0     6819.0           0.0  1643.0    74.0  Gravior Noxnuther   \n",
+       "8689          0.0        0.0           0.0     0.0     0.0    Kurta Mondalley   \n",
+       "8690          0.0        0.0        1872.0     1.0     0.0       Fayey Connon   \n",
+       "8691          0.0     1049.0           0.0   353.0  3235.0   Celeon Hontichre   \n",
+       "8692        126.0     4688.0           0.0     0.0    12.0   Propsh Hontichre   \n",
        "\n",
-       "   Transported  \n",
-       "0        False  \n",
-       "1         True  \n",
-       "2        False  \n",
-       "3        False  \n",
-       "4         True  "
+       "      Transported  \n",
+       "0           False  \n",
+       "1            True  \n",
+       "2           False  \n",
+       "3           False  \n",
+       "4            True  \n",
+       "...           ...  \n",
+       "8688        False  \n",
+       "8689        False  \n",
+       "8690         True  \n",
+       "8691        False  \n",
+       "8692         True  \n",
+       "\n",
+       "[8693 rows x 14 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "spaceship = pd.read_csv(\"https://raw.githubusercontent.com/data-bootcamp-v4/data/main/spaceship_titanic.csv\")\n",
-    "spaceship.head()"
+    "spaceship"
    ]
   },
   {
@@ -208,11 +331,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8693, 14)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "spaceship.shape"
    ]
   },
   {
@@ -224,11 +359,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PassengerId      object\n",
+       "HomePlanet       object\n",
+       "CryoSleep        object\n",
+       "Cabin            object\n",
+       "Destination      object\n",
+       "Age             float64\n",
+       "VIP              object\n",
+       "RoomService     float64\n",
+       "FoodCourt       float64\n",
+       "ShoppingMall    float64\n",
+       "Spa             float64\n",
+       "VRDeck          float64\n",
+       "Name             object\n",
+       "Transported        bool\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "spaceship.dtypes"
    ]
   },
   {
@@ -240,11 +401,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PassengerId       0\n",
+       "HomePlanet      201\n",
+       "CryoSleep       217\n",
+       "Cabin           199\n",
+       "Destination     182\n",
+       "Age             179\n",
+       "VIP             203\n",
+       "RoomService     181\n",
+       "FoodCourt       183\n",
+       "ShoppingMall    208\n",
+       "Spa             183\n",
+       "VRDeck          188\n",
+       "Name            200\n",
+       "Transported       0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "spaceship.isna().sum()"
    ]
   },
   {
@@ -262,11 +449,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "spaceship.dropna(inplace=True)"
    ]
   },
   {
@@ -287,11 +475,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>RoomService</th>\n",
+       "      <th>FoodCourt</th>\n",
+       "      <th>ShoppingMall</th>\n",
+       "      <th>Spa</th>\n",
+       "      <th>VRDeck</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>6606.000000</td>\n",
+       "      <td>6606.000000</td>\n",
+       "      <td>6606.000000</td>\n",
+       "      <td>6606.000000</td>\n",
+       "      <td>6606.000000</td>\n",
+       "      <td>6606.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>28.894036</td>\n",
+       "      <td>222.991674</td>\n",
+       "      <td>478.958523</td>\n",
+       "      <td>178.356494</td>\n",
+       "      <td>313.161520</td>\n",
+       "      <td>303.780048</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>14.533429</td>\n",
+       "      <td>644.987936</td>\n",
+       "      <td>1678.592291</td>\n",
+       "      <td>576.328407</td>\n",
+       "      <td>1144.016291</td>\n",
+       "      <td>1127.142166</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>27.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>38.000000</td>\n",
+       "      <td>49.000000</td>\n",
+       "      <td>82.750000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>52.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>79.000000</td>\n",
+       "      <td>9920.000000</td>\n",
+       "      <td>29813.000000</td>\n",
+       "      <td>12253.000000</td>\n",
+       "      <td>22408.000000</td>\n",
+       "      <td>20336.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Age  RoomService     FoodCourt  ShoppingMall           Spa  \\\n",
+       "count  6606.000000  6606.000000   6606.000000   6606.000000   6606.000000   \n",
+       "mean     28.894036   222.991674    478.958523    178.356494    313.161520   \n",
+       "std      14.533429   644.987936   1678.592291    576.328407   1144.016291   \n",
+       "min       0.000000     0.000000      0.000000      0.000000      0.000000   \n",
+       "25%      19.000000     0.000000      0.000000      0.000000      0.000000   \n",
+       "50%      27.000000     0.000000      0.000000      0.000000      0.000000   \n",
+       "75%      38.000000    49.000000     82.750000     30.000000     65.000000   \n",
+       "max      79.000000  9920.000000  29813.000000  12253.000000  22408.000000   \n",
+       "\n",
+       "             VRDeck  \n",
+       "count   6606.000000  \n",
+       "mean     303.780048  \n",
+       "std     1127.142166  \n",
+       "min        0.000000  \n",
+       "25%        0.000000  \n",
+       "50%        0.000000  \n",
+       "75%       52.000000  \n",
+       "max    20336.000000  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "\n",
+    "potencial_numerical_columns = spaceship.select_dtypes(include=[np.number])\n",
+    "potencial_numerical_columns.describe()"
    ]
   },
   {
@@ -303,11 +627,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "#your code here\n"
    ]
   },
   {
@@ -326,11 +650,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "x = potencial_numerical_columns\n",
+    "y = spaceship[\"Destination\"]\n",
+    "\"\"\" Ahora cogemos estos dataframes y los cortamos para hacer el test, en este caso el test es el 20% \"\"\"\n",
+    "X_train, X_test, y_train, y_test = train_test_split(x, y, test_size=0.20, random_state=0)\n"
    ]
   },
   {
@@ -358,11 +686,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "knn = KNeighborsClassifier(n_neighbors=3)\n"
    ]
   },
   {
@@ -374,11 +704,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "knn.fit(X_train, y_train)\n",
+    "\n",
+    "# Te predice los datos del x_test\n",
+    "pred = knn.predict(X_test)"
    ]
   },
   {
@@ -390,11 +724,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6104387291981845"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "knn.score(X_test, y_test)\n"
    ]
   },
   {
@@ -421,7 +767,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
